# CVVisual

./: .gitignore  .gitremotes  CMakeLists.txt  LICENSE  setup_workplace.sh  test.sh  test_only.sh
doc/: Ueberblick-tut.md  example-tut.md  filterfunction-tut.md  filterquery-ref.md  filterquery.md  index.md  introduction-tut.md  topics.yml  tutorial.md  views-ref.md
doc/code_example/: note.md
doc/images_example/: placeholder.txt
include/opencv2/: CallData.hpp  DebugDilate.hpp  DebugMode.hpp  call_meta_data.hpp  debug_mode.hpp  dilate.hpp  dmatch.hpp  erode.hpp  filter.hpp  final_show.hpp  morphology_ex.hpp  show_image.hpp  sobel.hpp
manualTests/: mantest_collapsable.cpp
manual_test/: overview.md
manual_test/accordion/: acctester.cpp  acctester.hpp  main.cpp
manual_test/autofilterwidget/: main.cpp
manual_test/basic_dilate/: main.cpp
manual_test/collapsable/: main.cpp
manual_test/cvutil/: main.cpp
manual_test/dbg_printer/: main.cpp
manual_test/defaultfilterviewtest/: main.cpp
manual_test/depthviewtest/: main.cpp
manual_test/diffFilterFunction/: main.cpp
manual_test/dual_filter_view/: main.cpp
manual_test/filter_call_tab/: main.cpp
manual_test/filters/: main.cpp
manual_test/filterview/: main.cpp
manual_test/final_show_crash/: main.cpp
manual_test/fsw/: main.cpp
manual_test/image_call_tab/: main.cpp
manual_test/imageconvert/: main.cpp
manual_test/imageconvertperf/: main.cpp
manual_test/imageview/: main.cpp
manual_test/linematchviewtest/: main.cpp
manual_test/match/: main.cpp
manual_test/match_call_tab/: main.cpp  main.cpp~
manual_test/matchscenetest/: main.cpp  main.cpp~
manual_test/multiple_calls/: main.cpp
manual_test/multiview_call_tab/: main.cpp
manual_test/registerhelper/: main.cpp
manual_test/signalslot/: main.cpp
manual_test/single_image/: main.cpp
manual_test/singlefilterviewtest/: main.cpp
manual_test/test_all/: main.cpp
manual_test/translationviewtest/: main.cpp
manual_test/zoomableimage/: main.cpp
protokolle/: treffen_1.md
src/: Call.cpp  Call.hpp  Dilate.cpp  call.cpp  call.hpp  data_controller.cpp  data_controller.hpp  dilate.cpp  match_call.cpp  match_call.hpp  util.hpp
src/controller/: view_controller.cpp  view_controller.hpp
src/dbg/: dbg.cpp  dbg.hpp  log.cpp  log.h  string_builder.hpp
src/extension_api/: api.cpp  api.hpp
src/gui/: call_tab.hpp  call_window.cpp  call_window.hpp  close_window.cpp  close_window.hpp  filter_call_tab.cpp  filter_call_tab.hpp  filter_call_tab.hpp~  image_call_tab.cpp  image_call_tab.hpp  main_call_window.cpp  main_call_window.hpp  match_call_tab.cpp  match_call_tab.hpp  match_call_tab.hpp~  multiview_call_tab.hpp  overview_group_subtable.cpp  overview_group_subtable.hpp  overview_panel.cpp  overview_panel.hpp  overview_table.cpp  overview_table.hpp  overview_table_collumn.cpp  overview_table_collumn.hpp  overview_table_row.cpp  overview_table_row.hpp  rawview_group_subtable.cpp  rawview_group_subtable.hpp  rawview_table.cpp  rawview_table.hpp  rawview_table_collumn.cpp  rawview_table_collumn.hpp  rawview_table_row.cpp  rawview_table_row.hpp  tabwidget.hpp
src/impl/: call.cpp  call.hpp  call_tab.cpp  call_tab.hpp  data_controller.cpp  data_controller.hpp  dilate.cpp  dmatch.cpp  erode.cpp  filter.cpp  filter_call.cpp  filter_call.hpp  filter_call_tab.cpp  filter_call_tab.hpp  filter_view.hpp  final_show.cpp  init.cpp  init.hpp  match_call.cpp  match_call.hpp  match_call_tab.cpp  match_call_tab.hpp  match_view.hpp  morphology_ex.cpp  show_image.cpp  single_image_call.cpp  single_image_call.hpp  sobel.cpp  view_stub.cpp
src/qtutil/: .goutputstream-WI1MAX  accordion.cpp  accordion.hpp  autofilterwidget.hpp  collapsable.cpp  collapsable.hpp  cvutil.cpp  cvutil.hpp  cvvkeypoint.cpp  cvvkeypoint.hpp  cvvmatch.cpp  cvvmatch.hpp  diffFilterFunction.cpp  diffFilterFunction.hpp  filterfunctionwidget.hpp  filterselectorwidget.hpp  grayfilterwidget.cpp  grayfilterwidget.hpp  histogram.cpp  histogram.hpp  intervallselector.hpp  keypointpen.hpp  matchpen.hpp  matchscene.cpp  matchscene.hpp  matinfowidget.cpp  matinfowidget.hpp  portionselector.hpp  registerhelper.hpp  signalslot.cpp  signalslot.hpp  singlecolorkeypointpen.cpp  singlecolorkeypointpen.hpp  singlecolorpen.cpp  singlecolorpen.hpp  sobelfilterwidget.cpp  sobelfilterwidget.hpp  stfl_query_widget.cpp  stfl_query_widget.hpp  stfl_query_widget_completer.hpp  (+12 more)
src/qtutil/filter/: changed_pixels_widget.cpp  changed_pixels_widget.hpp  channelreorderfilter.cpp  channelreorderfilter.hpp  diffFilterWidget.cpp  diffFilterWidget.hpp  grayfilterwidget.cpp  grayfilterwidget.hpp  overlayfilterwidget.cpp  overlayfilterwidget.hpp  sobelfilterwidget.cpp  sobelfilterwidget.hpp
src/qtutil/filterimpl/: sobelfilterwidget.cpp  sobelfilterwidget.hpp
src/qtutil/matchview/: colorutil.hpp  cvvkeypoint.cpp  cvvkeypoint.hpp  cvvmatch.cpp  cvvmatch.hpp  cvvpointmatch.cpp  cvvpointmatch.hpp  (+53 more)
src/qutil/: accordion.cpp  akkordeon.cpp  akkordeon.hpp  collapsable.cpp  collapsable.hpp
src/stfl/: ElementGroup.hpp  STFLEngine.hpp  element_group.hpp  overview_group_subtable.cpp  overview_group_subtable.hpp  overview_panel.cpp  overview_panel.hpp  overview_table.cpp  overview_table.hpp  overview_table_collumn.cpp  overview_table_collumn.hpp  stfl_engine.hpp  stfl_query_widget.cpp  stfl_query_widget.hpp  stringutils.cpp  stringutils.hpp
src/util/: observer_ptr.hpp  optional.hpp  util.hpp
src/view/: defaultfilterview.cpp  defaultfilterview.hpp  depthview.cpp  depthview.hpp  dual_filter_view.cpp  dual_filter_view.hpp  dummyfilterview.cpp  dummyfilterview.hpp  filter_view.hpp  image_view.cpp  image_view.hpp  linematchview.cpp  linematchview.hpp  match_view.hpp  pointmatchview.cpp  rawview.cpp  rawview.hpp  rawview_window.cpp  rawview_window.hpp  singlefilterview.cpp  singlefilterview.hpp  translationsmatchview.cpp  translationsmatchview.hpp  view_stub.cpp
test/: debug_flag.cpp  location.cpp  test_data_controller.cpp  test_debug_flag.cpp  test_is_any_of.cpp  test_location.cpp  test_observer_ptr.cpp  test_optional.cpp  test_reference.cpp
